# PatterRecognitionFC

./: CMakeLists.txt  PR_Fancy.py  PR_Pixels.py  PixelShop  PixelShop.cpp  README.md
